// Login Page Elements - Android
output.loginPage = {
    emailField: 'com.saucelabs.mydemoapp.android:id/nameET',
    passwordField: 'com.saucelabs.mydemoapp.android:id/passwordET',
    loginButton: 'com.saucelabs.mydemoapp.android:id/loginBtn',
    errorMessage: 'com.saucelabs.mydemoapp.android:id/errorTV'
};
