// Navigation Elements - Android
output.nav = {
    hamburgerMenu: 'com.saucelabs.mydemoapp.android:id/menuIV',
    menuItems: {
        login: 'Log In',
        logout: 'Log Out',
        catalog: 'Catalog',
        cart: 'Cart',
        webview: 'Webview',
        qrCode: 'QR Code Scanner',
        geoLocation: 'Geo Location',
        drawing: 'Drawing',
        about: 'About',
        resetAppState: 'Reset App State',
        biometrics: 'FingerPrint'
    }
};
